upgrade JDK to 21